--- a/SeenIt/templates/createPostView.hbs
+++ b/SeenIt/templates/createPostView.hbs
@@ -1,15 +1,13 @@
 {{> header}}
-
 <div class="content">
     {{> navigation}}
-
     <section id="viewSubmit">
         <div class="submitArea">
             <h1>Submit Link</h1>
             <p>Please, fill out the form. A thumbnail image is not required.</p>
         </div>
         <div class="submitArea formContainer">
-            <form action="#/create/post" method="post" id="submitForm" class="submitForm">
+            <form action="#/createPost" method="post" id="submitForm" class="submitForm">
                 <label>Link URL:</label>
                 <input name="url" value="" type="text">
                 <label>Link Title:</label>
@@ -23,5 +21,4 @@
         </div>
     </section>
 </div>
-
 {{> footer}}
